@@ -34,11 +34,35 @@ include(MODULES_DIR . DIRECTORY_SEPARATOR . 'netdevxajax.inc.php');
 $SMARTY->assign('xajax', $LMS->RunXajax());
 
 if (!isset($_POST['xjxfun'])) {                  // xajax was called and handled by netdevxajax.inc.php
+    $netdev = $LMS->GetNetDev($id);
+
+    if (preg_match('/^[0-9]+$/', $netdev['producerid'])
+        && preg_match('/^[0-9]+$/', $netdev['modelid'])) {
+        $netdev['producer'] = $netdev['producerid'];
+        $netdev['model'] = $netdev['modelid'];
+    }
+
     $attachmenttype = 'netdevid';
     $attachmentresourceid = $id;
+    $SMARTY->assign('attachmenttype', $attachmenttype);
+    $SMARTY->assign('attachmentresourceid', $attachmentresourceid);
+
+    $filecontainers = array(
+        'netdevid' => array(
+            'id' => $id,
+            'prefix' => trans('Attachments of the device:'),
+            'containers' => $LMS->GetFileContainers('netdevid', $id),
+        ),
+        'netdevmodelid' => array(
+            'id' => $netdev['modelid'],
+            'prefix' => trans('Attachments of the model:'),
+            'containers' => $LMS->GetFileContainers('netdevmodelid', $netdev['model']),
+        ),
+    );
+    $SMARTY->assign('filecontainers', $filecontainers);
+
     include(MODULES_DIR . DIRECTORY_SEPARATOR . 'attachments.php');
 
-    $netdev = $LMS->GetNetDev($id);
     $netdevconnected = $LMS->GetNetDevConnectedNames($id);
     $netcomplist = $LMS->GetNetdevLinkedNodes($id);
     $netdevlist = $LMS->GetNotConnectedDevices($id);
