@@ -14,6 +14,10 @@
 {block name=netdevattachments}
 	{include file="attachments.html" attachmenttype="netdevid" attachmentresourceid=$netdev.id}
 {/block}
+{$attachment_support_already_loaded = true}
+{block name=netdevmodelattachments}
+	{include file="attachments.html" attachmenttype="netdevmodelid" attachmentresourceid=$netdev.modelid}
+{/block}
 {block name=netdevmanagementurl}
 	{include file="managementurl/managementurls.html"}
 {/block}
